--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@
           </div>
         </div>
         <div class="flex items-center gap-4">
+          <a
+            class="p-3 px-6 rounded-full glass hover:bg-slate-200 dark:hover:bg-slate-700 transition-all text-slate-500"
+            href="/login-screen/code.html"
+          >
+            Login
+          </a>
           <button
             class="p-3 rounded-full glass hover:bg-slate-200 dark:hover:bg-slate-700 transition-all text-slate-500"
             onclick="document.documentElement.classList.toggle('dark')"
