--- a/onboarding__first-goal-path/code.html
+++ b/onboarding__first-goal-path/code.html
@@ -78,7 +78,7 @@
     </style>
   </head>
   <body
-    class="relative flex min-h-screen w-full flex-col bg-background-light dark:bg-background-dark overflow-x-hidden font-display antialiased selection:bg-primary/20 selection:text-primary transition-colors duration-300"
+    class="relative flex min-h-screen w-full flex-col bg-background-light dark:bg-background-dark overflow-x-hidden antialiased selection:bg-primary/20 selection:text-primary transition-colors duration-300"
   >
     <!-- Ambient Background Elements -->
     <div class="fixed inset-0 overflow-hidden pointer-events-none">
