--- a/transaction__grid-view/code.html
+++ b/transaction__grid-view/code.html
@@ -38,7 +38,7 @@
     </style>
   </head>
   <body
-    class="bg-background-light text-[#0f1a19] font-display antialiased overflow-hidden selection:bg-primary/30"
+    class="bg-background-light text-[#0f1a19] antialiased overflow-hidden selection:bg-primary/30"
   >
     <div class="flex h-screen w-full overflow-hidden">
       <load src="/src/partials/sidebar.html" active="transaction" />
