--- a/transaction__report-summary/code.html
+++ b/transaction__report-summary/code.html
@@ -51,10 +51,10 @@
     </style>
   </head>
   <body
-    class="bg-background-light text-[#0f1a19] font-display antialiased overflow-hidden selection:bg-primary/30"
+    class="bg-background-light text-[#0f1a19] antialiased overflow-hidden selection:bg-primary/30"
   >
     <div class="flex h-screen w-full overflow-hidden">
-      <load src="/src/partials/sidebar.html" active="analysis" />
+      <load src="/src/partials/sidebar.html" active="report" />
       <main
         class="flex-1 flex flex-col h-full relative overflow-hidden bg-gradient-to-br from-[#fafaf9] via-[#f2fcfb] to-[#e6f7f6]"
       >
