--- a/onboarding__first-goal-path/code.html
+++ b/onboarding__first-goal-path/code.html
@@ -105,41 +105,15 @@
           class="flex items-center justify-between px-8 py-6 border-b border-gray-100 dark:border-gray-800"
         >
           <div class="flex items-center gap-3">
-            <div
-              class="size-8 rounded-lg bg-primary flex items-center justify-center text-white shadow-lg shadow-primary/30"
-            >
-              <svg
-                fill="none"
-                height="20"
-                viewbox="0 0 24 24"
-                width="20"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M12 2L2 7L12 12L22 7L12 2Z"
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                ></path>
-                <path
-                  d="M2 17L12 22L22 17"
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                ></path>
-                <path
-                  d="M2 12L12 17L22 12"
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                ></path>
-              </svg>
+            <div class="size-10">
+              <img
+                alt="Sira Logo"
+                class="w-full h-full object-cover"
+                src="/Sira_Official_Logo.webp"
+              />
             </div>
             <span
-              class="text-xl font-bold tracking-tight text-[#121717] dark:text-white"
+              class="text-xl d-block font-bold tracking-tight text-primary dark:text-white"
               >Sira</span
             >
           </div>
@@ -157,7 +131,7 @@
         </div>
         <!-- Card Body -->
         <div
-          class="flex flex-col items-center justify-center px-8 py-12 md:py-16 text-center"
+          class="flex flex-col items-center justify-center px-8 py-12 md:py-16 text-center min-h-[700px]"
         >
           <!-- Headline & Subtext -->
           <div class="max-w-2xl mb-10">
@@ -310,9 +284,9 @@
       </main>
       <!-- Contextual Help (Subtle detail) -->
       <p
-        class="mt-6 text-sm text-gray-400 dark:text-gray-500 font-medium cursor-pointer hover:text-primary transition-colors"
+        class="mt-6 text-sm font-semibold text-gray-400 dark:text-gray-500 font-medium"
       >
-        Not sure where to start? Take a quick quiz.
+        Sira © 2026
       </p>
     </div>
   </body>
