--- a/onboarding__welcome-and-vibes/code.html
+++ b/onboarding__welcome-and-vibes/code.html
@@ -2,98 +2,10 @@
 
 <html class="light" lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Sira Onboarding: Welcome &amp; Vibes</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&amp;display=swap"
-      rel="stylesheet"
+    <load
+      src="/src/partials/head.html"
+      title="Sira Onboarding: Welcome & Vibes"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-    <script id="tailwind-config">
-      tailwind.config = {
-        darkMode: "class",
-        theme: {
-          extend: {
-            colors: {
-              primary: "#1b988d",
-              "background-light": "#f6f9f8",
-              "background-dark": "#182125",
-              "surface-dark": "#232e34",
-            },
-            fontFamily: {
-              display: ["Manrope", "sans-serif"],
-            },
-            borderRadius: {
-              DEFAULT: "0.5rem",
-              lg: "1rem",
-              xl: "1.5rem",
-              "2xl": "2rem",
-              full: "9999px",
-            },
-            boxShadow: {
-              glass: "0 8px 32px 0 rgba(31, 38, 135, 0.07)",
-            },
-          },
-        },
-      };
-    </script>
-    <style>
-      .glass-panel {
-        background: rgba(255, 255, 255, 0.65);
-        backdrop-filter: blur(12px);
-        -webkit-backdrop-filter: blur(12px);
-        border: 1px solid rgba(255, 255, 255, 0.5);
-      }
-      .dark .glass-panel {
-        background: rgba(35, 46, 52, 0.65);
-        border: 1px solid rgba(255, 255, 255, 0.05);
-      }
-
-      /* Abstract background shapes */
-      .blob {
-        position: absolute;
-        filter: blur(80px);
-        z-index: 0;
-        opacity: 0.6;
-      }
-
-      .wealth-map-path {
-        stroke-dasharray: 1000;
-        stroke-dashoffset: 1000;
-        animation: dash 5s linear forwards;
-      }
-
-      @keyframes dash {
-        to {
-          stroke-dashoffset: 0;
-        }
-      }
-
-      .ripple-point {
-        animation: ripple-out 3s ease-out infinite;
-        transform-origin: center;
-        transform-box: fill-box;
-      }
-
-      @keyframes ripple-out {
-        0% {
-          opacity: 0;
-          transform: scale(1);
-        }
-        20% {
-          opacity: 0.6;
-        }
-        100% {
-          opacity: 0;
-          transform: scale(3);
-        }
-      }
-    </style>
   </head>
   <body
     class="relative flex min-h-screen w-full flex-col bg-background-light dark:bg-background-dark overflow-x-hidden antialiased selection:bg-primary/20 selection:text-primary transition-colors duration-300"
@@ -260,20 +172,17 @@
           </div>
           <!-- Action Button -->
           <button
-            class="relative group overflow-hidden rounded-xl bg-primary px-12 py-4 transition-all hover:bg-[#157a72] hover:shadow-lg hover:shadow-primary/30 active:scale-95"
+            class="w-full max-w-[320px] py-4 px-8 rounded-xl teal-flux-gradient text-white font-semibold shadow-lg shadow-teal-500/30 hover:shadow-teal-500/40 hover:-translate-y-0.5 transition-all duration-300"
             onclick="(function() {
                 document.location.href = '/onboarding__connect-provider/code';
             })()"
           >
-            <div class="relative flex items-center gap-2">
-              <span class="text-base font-bold text-white tracking-wide"
-                >Get Started</span
-              >
-              <span
-                class="material-symbols-outlined text-white text-sm transition-transform group-hover:translate-x-1"
+            <span class="flex items-center justify-center gap-2">
+              Get Started
+              <span class="material-symbols-outlined text-sm"
                 >arrow_forward</span
               >
-            </div>
+            </span>
           </button>
         </div>
         <!-- Footer Decorative -->
