style: increase forward icon in onboarding page

--- a/onboarding__first-goal-path/code.html
+++ b/onboarding__first-goal-path/code.html
@@ -198,7 +198,7 @@
           >
             <span class="flex items-center justify-center gap-2">
               Finish Setup
-              <span class="material-symbols-outlined text-sm"
+              <span class="material-symbols-outlined text-xl"
                 >arrow_forward</span
               >
             </span>
