--- a/onboarding__connect-provider/code.html
+++ b/onboarding__connect-provider/code.html
@@ -225,7 +225,7 @@
             >
               <span class="flex items-center justify-center gap-2">
                 Continue
-                <span class="material-symbols-outlined text-sm"
+                <span class="material-symbols-outlined text-xl"
                   >arrow_forward</span
                 >
               </span>
