--- a/onboarding__welcome-and-vibes/code.html
+++ b/onboarding__welcome-and-vibes/code.html
@@ -179,7 +179,7 @@
           >
             <span class="flex items-center justify-center gap-2">
               Get Started
-              <span class="material-symbols-outlined text-sm"
+              <span class="material-symbols-outlined text-xl"
                 >arrow_forward</span
               >
             </span>
