fix: revert the dashboard layout changed

--- a/dashboard__main/code.html
+++ b/dashboard__main/code.html
@@ -38,18 +38,6 @@
         background: rgba(30, 41, 59, 0.4);
         border: 1px solid rgba(255, 255, 255, 0.05);
       }
-      .text-gradient {
-        background: linear-gradient(135deg, #2a9d8f 0%, #264653 100%);
-        background-clip: text;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-      }
-      .dark .text-gradient {
-        background: linear-gradient(135deg, #63c1bb 0%, #c8e6e2 100%);
-        background-clip: text;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-      }
       .nav-item-active {
         background: linear-gradient(
           to right,
@@ -220,7 +208,7 @@
                     >Total Net Worth</span
                   >
                   <span
-                    class="font-mono text-5xl font-bold text-gradient tracking-tight mb-2"
+                    class="font-mono text-5xl font-bold flux-gradient-text tracking-tight mb-2"
                     >$121,260</span
                   >
                   <div
